tools/architecture/validate-source-imports/tests/fixtures/invalid/package-subpath-not-exported-invalid/src/index.ts
import something from "@platform/domain-core/internals";
export { something };
